Fix for too small font in Firefox

--- a/client/src/styles/header.scss
+++ b/client/src/styles/header.scss
@@ -7,7 +7,7 @@
 }
 
 .supersmall {
-  font-size: 0.1em;
+  font-size: 9px;
 }
 
 .header-main {
